# SimpleSecureChat-Server

./: .gitignore  AUTHORS  README.md  configure.ac  makefile.am  mysql_adduser.sh  mysql_start.sh  sudo
include/: base64.h  cstdinfo.h  handler.h  hashing.h  isc.h  loadconfig.h  protected_malloc.h  serialization.h  settings.h  sscsrvfunc.h
rework/: configure.ac  makefile.am
rework/include/: base64.h  db.h  entry.h  errchk.h  heap.h  log.h  misc.h  read_config.h  sconfig.h  serial.h  session.h  settings.h  sha256_hash.h  sock.h  tls.h
rework/src/: base64.c  db.c  entry.c  heap.c  log.c  misc.c  modconf.c  read_config.c  sconfig.c  serial.c  server_ctl.c  session.c  sha256_hash.c  sock.c  tls.c
rework/tests/: test_serial.c
src/: base64.c  cstdinfo.c  handler.c  hashing.c  isc.c  loadconfig.c  modconf.c  protected_malloc.c  secure_chat_server.c  serialization.c  simpleconfig.c  sscsrvfunc.c
